New updates on the css

--- a/index.html
+++ b/index.html
@@ -274,19 +274,19 @@
                  <h4>get help</h4>
                  <ul>
                    <li><a href="#">FAQ</a></li>
-                   <li><a href="#">shipping</a></li>
-                   <li><a href="#">returns</a></li>
-                   <li><a href="#">order status</a></li>
-                   <li><a href="#">payment options</a></li>
+                   <li><a href="#">Privacy</a></li>
+                   <li><a href="#">Latest</a></li>
+                   <li><a href="#">Help</a></li>
+                   <li><a href="#">Sign Up</a></li>
                  </ul>
                </div>
                <div class="footer-col">
-                 <h4>online shop</h4>
+                 <h4>Category</h4>
                  <ul>
-                   <li><a href="#">Serum</a></li>
-                   <li><a href="#">Soap</a></li>
-                   <li><a href="#">Acne cream</a></li>
-                   <li><a href="#">Facial Cream</a></li>
+                   <li><a href="#">Business</a></li>
+                   <li><a href="#">Sport</a></li>
+                   <li><a href="#">Technology</a></li>
+                   <li><a href="#">Food</a></li>
                  </ul>
                </div>
                <div class="footer-col">
